# src/static/swagger.yaml
@@ -342,7 +342,7 @@ paths:
                 type: string
               price:
                 type: number
-                format: float 
+                format: float
               stock:
                 type: integer
               image_url:
@@ -535,13 +535,67 @@ paths:
     get:
       tags:
         - Category
-      summary: All category
+      summary: Retrieve all categories
       consumes:
         - application/json
       produces:
         - application/json
       responses:
-        201:
-          description: retrieve successfully
+        200:
+          description: Retrieve successfully
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    name:
+                      type: string
+                    description:
+                      type: string
+                    created_at:
+                      type: string
+                      format: date-time
+                    updated_at:
+                      type: string
+                      format: date-time
         400:
-          description: Failed
+          description: Failed to retrieve categories
+
+  /product/product_list:
+    get:
+      tags:
+        - Product
+      summary: Retrieve all products
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Successfully retrieved product list
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: integer
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: float
+                stock:
+                  type: integer
+                image_url:
+                  type: string
+                category_name:
+                  type: string
+        400:
+          description: Failed to retrieve product list
